# pain-joy-continuum

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-CONTENT-CC-BY-NC-SA-4.0.md  NOTICE.md  README.md  index.html  package.json  pyproject.toml  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  pages.yml
docs/: CLAIM_BOUNDARIES.md  PUBLISHING_PLAN.md  SAFETY_LOCKS.md
docs/pdf/: README.md
docs/source/: PJC_v1_1_Formula_Sheet.docx  PJC_v1_2_Joy_Crucible_Master_Spec.docx  README.md
examples/: demo_cycle.py
public/images/: README.md
schemas/: pjc_cycle_v1.schema.json
src/pain_joy_continuum/: __init__.py  pjc_v1_2.py
src/site/: App.jsx  index.css
tests/: test_pjc_v1_2.py
